<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="registration"
            type="com.example.navigationunittesting.di.viewmodel.RegistrationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.RegistrationFragment">


        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_Name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={registration.MName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_Email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_Name">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={registration.MEmailID}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_Age"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/textInput_Email">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_DOB"
                        android:inputType="number"
                        android:maxLength="10"

                        android:maxLines="1"
                        android:onClick="@{() ->registration.dateTimePicker()}"
                        android:text="@={registration.MDOB}" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_Address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toBottomOf="@id/textInput_Age">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_Address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_address"
                        android:inputType="text"
                        android:maxLines="4"
                        android:text="@={registration.MAddress}" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/button_Validate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:onClick="@{() ->registration.setOnClickListener()}"
                    android:padding="10dp"
                    android:text="@string/register"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_Address" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>