<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/item_list"
        android:icon="@drawable/ic_menu_list"
        android:title="@string/menu_list" />
    <item
        android:id="@+id/item_setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_setting" />

</menu>