...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FullDataDisplayActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_delete"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:padding="10dp"
                    android:onClick="@{()->fullDataViewModel.setOnClickListener()}"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintRight_toRightOf="parent"
...
